VSE Editor crash when opening a different scene as a strip #79940

Closed
opened 2020-08-20 08:55:08 +02:00 by Gehrig · 19 comments

System Information
Operating system: Windows 10
Graphics card: RTX 2080 Ti

Blender Version
Broken: 2.9 Beta (8-19-20)
Worked: 2.9 Beta (8-17-20)
Caused by 47c6f41b89

Short description of error
Blender crashes when opening a different scene as a strip in VSE editor. Also crashes if you try to open a blend file that uses a scene as a strip in the VSE editor.

Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file (as simple as possible).

  1. Open a default startup Blender file.
  2. Open up the Video Editing workspace
  3. Create a new scene, can do new, copy settings, doesn't appear to matter.
  4. Shift+A in the sequencer
  5. Scene->Scene (Or whatever your default scene name is)
  6. Crash
**System Information** Operating system: Windows 10 Graphics card: RTX 2080 Ti **Blender Version** Broken: 2.9 Beta (8-19-20) Worked: 2.9 Beta (8-17-20) Caused by 47c6f41b89 **Short description of error** Blender crashes when opening a different scene as a strip in VSE editor. Also crashes if you try to open a blend file that uses a scene as a strip in the VSE editor. **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file (as simple as possible). 1. Open a default startup Blender file. 2. Open up the Video Editing workspace 3. Create a new scene, can do new, copy settings, doesn't appear to matter. 4. Shift+A in the sequencer 5. Scene->Scene (Or whatever your default scene name is) 6. Crash
Author

Added subscriber: @Gehrig

Added subscriber: @Gehrig

#80189 was marked as duplicate of this issue

#80189 was marked as duplicate of this issue

#80029 was marked as duplicate of this issue

#80029 was marked as duplicate of this issue

#80184 was marked as duplicate of this issue

#80184 was marked as duplicate of this issue
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Hm, can confirm (even in 2.90 buildbot build 83c78529b9)
Bisecting...

Hm, can confirm (even in 2.90 buildbot build 83c78529b9) Bisecting...
Member

Added subscribers: @fclem, @dfelinto

Added subscribers: @fclem, @dfelinto
Member

Caused by 47c6f41b89

CC @fclem
CC @dfelinto

Caused by 47c6f41b89 CC @fclem CC @dfelinto

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Dalai Felinto self-assigned this 2020-08-26 16:14:03 +02:00

Technically this is fixed with the revert. I will close it for now, we can refer back to it from D8657.

Technically this is fixed with the revert. I will close it for now, we can refer back to it from [D8657](https://archive.blender.org/developer/D8657).

Changed status from 'Resolved' to: 'Confirmed'

Changed status from 'Resolved' to: 'Confirmed'

Nevermind, the issue is still present in master. @fclem this should be reverted in master too in my opinion.

Nevermind, the issue is still present in master. @fclem this should be reverted in master too in my opinion.

Added subscribers: @tintwotin, @Sergey, @iss

Added subscribers: @tintwotin, @Sergey, @iss
Member

I am confused, how can this be reverted in 2.90 while still happening in master? 2.90 was merged to master since.

I am confused, how can this be reverted in 2.90 while still happening in master? 2.90 was merged to master since.
Member

Added subscribers: @Sekhar, @tiles, @HooglyBoogly, @rjg

Added subscribers: @Sekhar, @tiles, @HooglyBoogly, @rjg
Member

Added subscriber: @info-27

Added subscriber: @info-27

This issue was referenced by 3fa1280132

This issue was referenced by 3fa1280132569b30cd75a4ef5435b97227b373c6

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.91 milestone 2023-02-08 16:20:48 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#79940
No description provided.